--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello Bsdk</h1>
+    <h1>Welcome to Our Project</h1>
 </body>
 </html>
