--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Welcome to Our Project</h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dolorem.
 </body>
 </html>
