--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to Our Project</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dolorem.
+    <h1>This is Online Voting System project</h1>
 </body>
 </html>
