Started home page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>//voting-system//</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to Our Project</h1>
-    <h1>This is Online Voting System project</h1>
+
+    <!-- Header content -->
+    <header>
+
+        <!-- Head that is first row of the webpage -->
+        <div class="head">
+            <h1 class="vote">Vote Now</h1>
+        </div>
+
+        <!-- Navigation bar -->
+        <nav class="nav">
+            <a class="nav-" href="#">Home</a>
+            <a class="nav-" href="#">About Us</a>
+            <a class="nav-" href="#">Features</a>
+            <a class="nav-" href="#">Services</a>
+            <a class="nav-" href="#">Pricing</a>
+            <a class="nav-" href="#">Contact Us</a>
+        </nav>
+
+    </header>
 </body>
+
 </html>
