started home page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <!-- Navigation bar -->
         <nav class="nav">
+            
             <a class="nav-" href="#">Home</a>
             <a class="nav-" href="#">About Us</a>
             <a class="nav-" href="#">Features</a>
@@ -27,8 +28,12 @@
             <a class="nav-" href="#">Pricing</a>
             <a class="nav-" href="#">Contact Us</a>
         </nav>
-
     </header>
+
+    <!-- Main content -->
+     <main>
+        <div></div>
+     </main>
 </body>
 
 </html>
