Home page almost done

--- a/index.html
+++ b/index.html
@@ -32,8 +32,67 @@
 
     <!-- Main content -->
      <main>
-        <div></div>
+
+        <!-- Image related to the voting system -->
+        <div class="main-box">
+            <img src="online-voting.png" class="vote-img">
+        </div>
      </main>
+     <footer class="foot">
+        <div class="foot-top">
+            <div class="foot-box">
+                <h2>About Us</h2>
+                <ul>
+                    <li>About Us</li>
+                    <li>Our Customers</li>
+                    <li>Achievements</li>
+                    <li>Our Inspirations</li>
+                    <li>Our Mission</li>
+                    <li>Our Vision</li>
+                    <li>Reviews</li>
+                </ul>
+            </div>
+            <div class="foot-box">
+                <h2>Services</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="foot-box">
+                <h2>Our Policy</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="foot-box">
+                <h2>Others</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+     </footer>
 </body>
 
 </html>
